fixed share buttons on mobile

--- a/style.scss
+++ b/style.scss
@@ -115,7 +115,7 @@ a:active{
 .btn-share1{
     border-radius: 10px;
     font-size: 14px;
-    width: 200px;
+    width: 220px;
     color: white;
     justify-content: space-evenly;
     font-weight: 400;
@@ -132,7 +132,6 @@ a:active{
 
 
 .twt-share{
-    width: 190px;
     background-color: #1C93E4;
     transition: 0.2s ease;
 }
@@ -143,7 +142,6 @@ a:active{
 
 .redd-share{
     background-color: #F23C17;
-    width: 180px;
     transition: 0.2s ease;
 }
 
@@ -1170,5 +1168,12 @@ gap: 10px;
     #thread__wrapper{
         border-radius: 0;
     }
+
+    .share{
+        display: flex;
+        flex-direction: column;
+    }
+
+    
 }
 
